# clean-code-in-python

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  pyproject.toml
demo/classes/: 01_linear_regression.py  02_calculate_metric.py
demo/functions/: 01_process_user_data.py
exercises/: __init__.py
exercises/classes/: 01_linear_regression.py  01_linear_regression_refactored.py  02_calculate_metric.py  02_calculate_metric_refactored.py  03_circle_ellipse.py
exercises/functions/: 01_process_user_data.py  01_process_user_data_refactored.py
exercises/interfaces/: 01_duck_typing.py  02_goose_typing.py  03_static_duck_typing.py  goose_typing.py
