[tool.poetry]
name = "clean-code-python"
version = "0.1.0"
description = "Clean up your code, An exercise in Python"
authors = ["Irena Grgic <irena.grgic11@gmail.com>"]
readme = "README.md"
packages = [{ include = "exercises" }]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pre-commit = "^3.8.0"
mypy = "^1.11.1"



[tool.ruff]
src = ["exercises"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # Pyflakes
    "F",    # pycodestyle
    "I",    # import sorting
    "D",    # docstring conventions
    "N",    # variable naming conventions
    "W191", # Indentation contains tabs
    "W291", # Trailing whitespace
    "W292", # No newline at end of file
    "W293", # whitespace format issues
]

ignore = [
    "D203", # ignoring because conflicts with D211
    "D213" # ignoring because conflicts with D212
]

[tool.mypy]
strict = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
